--- a/autenticar.html
+++ b/autenticar.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>  </title>
+    <title> Curso de Javascript </title>
 </head>
 <body>
+    <h1> Pronto! Agora vai autenticar </h1>
     
 </body>
 </html>
