--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <label> Continuar Conectado </label>
             <br> <br> <input type="submit"> 
         </form>
+        <scrip src="sucesso.js"></scrip>
     </body>
     </head>
 </html>
